@@ -92,6 +92,8 @@ Version 1.5.0+svn:
      are created on first run
    * added command line parameter --config-path, which prints the path to the
      config directory and exits
+   * fix a bug with variable substitution time of [event]-within-[event]
+   * fix a crash with [ai] in [modify_side]
 
 Version 1.5.0:
  * campaigns:
